Misake in href of college website

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
             <div class="about_area">
               <!-- START ABOUT HEADING -->
               <div class="heading">
-                <h2 class="wow fadeInLeftBig">ACM Student Chapter at <a href="http://wwww.svnit.ac.in" target="_blank">NIT Surat</a></h2>
+                <h2 class="wow fadeInLeftBig">ACM Student Chapter at <a href="http://www.svnit.ac.in" target="_blank">NIT Surat</a></h2>
                 <p>Founded in 2005, the chapter has been a centre for various learning, fun, and productive activities. Be it coding challenges, hackathons, quizzes, or application development, the chapter has done its best. The activities of the chapter are widely acknowledged in the institute and keenly looked for. Massive turnout at every event shows the range of popularity the chapter has.</br> The bar is being raised year after year. With announcement of Epiphany, CTF! in Quest, and other challenges as open-for-all contests, the chapter is aiming nationwide recognition.</p>
               </div>
             </div>
