Added links for respective events

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                     <div class="service_iconarea">
                       <span class="fa fa-paper-plane service_icon"></span>
                     </div>
-                    <h3 class="service_title">HACKATHON - InOut</h3>
+                    <a href="https://hackinout.co/" target="_blank"><h3 class="service_title">HACKATHON - InOut</h3></a>
                     <p>Great programmers and even more awesome mentors come together in a mere time-span of 24 hours to build a code from complete scratch and give it the form of an good application. So gear up for a thrilling weekend and creating something that may result into an amazing product. </p>
                   </div>
                 </div>
@@ -184,7 +184,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                     <div class="service_iconarea">
                       <span class="fa fa-suitcase service_icon"></span>
                     </div>
-                    <h3 class="service_title">Epiphany Series</h3>
+                    <a href="https://www.hackerearth.com/search/search-results/?q=epiphany&utm_source=header&utm_medium=search-all&utm_campaign=he-search" target="_blank"><h3 class="service_title">Epiphany Series</h3></a>
                     <p>Interpret it as our own ICPC - just on a smaller scale. The only stage in our college to showcase your logical programming skills and simultaneously win a lot of cool stuff. If you are totally new to coding, again this also is your chance to improvise gradually and beat the coding champions at the end of the Epiphany season.</p>
                   </div>
                 </div>
@@ -224,7 +224,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                    <div class="service_iconarea">
                       <span class="fa fa-envelope-o service_icon"></span>
                     </div>
-                    <h3 class="service_title">Hour of Code</h3>
+                    <a href="https://hourofcode.com/in" target="_blank"><h3 class="service_title">Hour of Code</h3></a>
                     <p>Code.org decided to organize "Hour of Code" where all do programming for an hour.
 ACM NIT Surat decided to join and went to local schools to promote computing and programming by conducting this "Hour of Code".</p>
                   </div>
@@ -796,3 +796,4 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
     <script src="js/custom.js"></script>
   </body>
 </html>
+
