Spelling mistake corrected

--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
 
     <!--=========== BEGIN WORKS SECTION ================-->
     <section id="works">
-      <!-- BEGIN MILESTONE WORSK SECTION -->
+      <!-- BEGIN MILESTONE WORKS SECTION -->
       <div class="row">
         <div class="col-lg-12 col-md-12">
           <div class="counter_section">
