--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
           <div class="col-lg-12 col-md-12">
             <!-- START BLOG HEADING -->
             <div class="heading">
-              <h2 class="wow fadeInLeftBig">Latest News From Blog</h2>
+              <h2 class="wow fadeInLeftBig">Projects</h2>
               <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
             </div>
           </div>
@@ -684,8 +684,8 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
             <div class="col-lg-3 col-md-3 col-sm-6">
               <div class="single_contact_feaured wow fadeInUp">
                 <i class="fa fa-envelope-o"></i>
-                <h4>Email Address</h4>
-                <p>singlepro@gmail.com</p>
+               <h4>Email Address</h4>
+                <p>admin@nitsurat.acm.org</p>
               </div>
             </div>
             <!-- BEGIN CALL US FEATURE -->
@@ -693,15 +693,18 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
               <div class="single_contact_feaured wow fadeInUp">
                 <i class="fa fa-map-marker"></i>
                 <h4>Office Location</h4>
-                <p>Your Company Office Location</p>
+                <p>ACM NIT Surat Chapter, 
+				   Computer Engineering Department, 
+				   SVNIT Surat, 
+				   Ichchhanath, Surat - 395007 </p>
               </div>
             </div>
             <!-- BEGIN CALL US FEATURE -->
             <div class="col-lg-3 col-md-3 col-sm-6">
               <div class="single_contact_feaured wow fadeInUp">
                 <i class="fa fa-clock-o"></i>
-                <h4>Working Hours</h4>
-                <p>Monday-Friday 9.00-21.00</p>
+                <h4>Forum@ ACM SVNIT</h4>
+                <p> http://nitsurat.acm.org/forum/ </p>
               </div>
             </div>
           </div>
