Flat Icons for all the events.

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInLeft">
                     <div class="service_iconarea">
-                      <span class="fa fa-paper-plane service_icon"></span>
+                      <img src="img/services/InOut.png" height="150px">
                     </div>
                     <a href="https://hackinout.co/" target="_blank"><h3 class="service_title">HACKATHON - InOut</h3></a>
                     <p>Great programmers and even more awesome mentors come together in a mere time-span of 24 hours to build a code from complete scratch and give it the form of an good application. So gear up for a thrilling weekend and creating something that may result into an amazing product. </p>
@@ -182,7 +182,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInRight">
                     <div class="service_iconarea">
-                      <span class="fa fa-suitcase service_icon"></span>
+                      <img src="img/services/Epiphany.png" height="150px">
                     </div>
                     <a href="https://www.hackerearth.com/search/search-results/?q=epiphany&utm_source=header&utm_medium=search-all&utm_campaign=he-search" target="_blank"><h3 class="service_title">Epiphany Series</h3></a>
                     <p>Interpret it as our own ICPC - just on a smaller scale. The only stage in our college to showcase your logical programming skills and simultaneously win a lot of cool stuff. If you are totally new to coding, again this also is your chance to improvise gradually and beat the coding champions at the end of the Epiphany season.</p>
@@ -192,7 +192,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInLeft">
                     <div class="service_iconarea">
-                      <span class="fa fa-paper-plane service_icon"></span>
+                      <img src="img/services/Tech.png" height="150px">
                     </div>
                     <h3 class="service_title">TECHIQ-2.0 & 1.0</h3>
                     <p>If you think of yourself as the know-it-all guy, here's your chance to prove it and get rewarded handsomely for it. So, brace yourselves for the mega-quiz on the topics of technologies, companies and persons who changed the course of modern day computing.</p>
@@ -202,7 +202,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInRight">
                     <div class="service_iconarea">
-                      <span class="fa fa-paper-plane service_icon"></span>
+                      <img src="img/services/Workshop.png" height="150px">
                     </div>
                     <h3 class="service_title">Basic Workshops</h3>
                     <p>There are a lot of new technologies out there - but the basics never change. Also not everyone knows the basics. So here we are to help you learn the basic programming skills in different technologies. All you need to do is show a little enthusiasm and bring a book & a pen/(laptop).</p>
@@ -212,7 +212,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInLeft">
                    <div class="service_iconarea">
-                      <span class="fa fa-envelope-o service_icon"></span>
+                      <img src="img/services/Geek.png" height="150px">
                     </div>
                     <h3 class="service_title">ACM Geekend</h3>
                     <p>Capture the Flag, 2x10 Relay, Epiphany 4.2 All conducted during the weekend titled as "Geekend". Over 200 students participated from all years whilst hacking and coding their way through.</p>
@@ -222,7 +222,7 @@ The chapter is rapidly gaining recognition state-wide and we aim amd hope to get
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInRight">
                    <div class="service_iconarea">
-                      <span class="fa fa-envelope-o service_icon"></span>
+                      <img src="img/services/HourOfCode.png" height="150px">
                     </div>
                     <a href="https://hourofcode.com/in" target="_blank"><h3 class="service_title">Hour of Code</h3></a>
                     <p>Code.org decided to organize "Hour of Code" where all do programming for an hour.
@@ -233,7 +233,7 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInLeft">
                    <div class="service_iconarea">
-                      <span class="fa fa-envelope-o service_icon"></span>
+                      <img src="img/services/ACMFair.png" height="150px">
                     </div>
                     <h3 class="service_title">ACM Fair</h3>
                     <p>The biggest extravaganza of even semester.Create applications, gain fame, and win prizes.For more info, visit <a href="http://nitsurat.acm.org/fair/">ACM Fair 2014</a>.</p>
@@ -243,7 +243,7 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
                   <!-- BEGIN SINGLE SERVICE -->
                   <div class="single_service wow fadeInRight">
                    <div class="service_iconarea">
-                      <span class="fa fa-envelope-o service_icon"></span>
+                      <img src="img/services/ACMQuest.png" height="150px">
                     </div>
                     <h3 class="service_title">ACM Quest</h3>
                     <p>The main attraction of the odd semester, this contains a plethora of events from quizzes to hackathons.For more info, visit <a href="http://nitsurat.acm.org/quest/">ACM Quest 2013</a></p>
