posters for slider added

--- a/index.html
+++ b/index.html
@@ -104,11 +104,49 @@
             <!-- THE FIRST SLIDE-->
             <li>
               <!-- FIRST SLIDE OVERLAY -->
-              <div class="slider_overlay"></div> 
+              <div class="slider_overlay techiq">
+                <h3>Date-17 october Time-03:00pm Venue-New CRC</h3>
+              </div> 
               <!-- FIRST SLIDE MAIN IMAGE -->
               <img src="img/full-slider/techiq.jpg" alt="img">
             </li>
-
+            <!--THE SECOND SLIDE-->
+            <li>
+              <!--SECOND SIDE OVERLAY-->
+              <div class="slider_overlay"></div> 
+              <!-- SECOND SLIDE MAIN IMAGE -->
+              <img src="img/full-slider/orientation.jpg" alt="img">
+            </li>
+            <!--THE THIRD SLIDE-->
+            <li>
+              <!--THIRD SIDE OVERLAY-->
+              <div class="slider_overlay"></div> 
+              <!--THIRD SLIDE MAINIMAGE-->
+              <img src="img/full-slider/foss.jpg" alt="img">
+            </li>
+            <!--THE FOURTH SLIDE-->
+            <li>
+              <!--FOURTH SLIDE OVERLAY-->
+              <div class="slider_overlay ctf">
+                <h3>Date-17 october<br/>Time-09:00am<br/>Venue-New CRC</h3>
+              </div> 
+              <!--FOURTH SLIDE MAIN IMAGE-->
+              <img src="img/full-slider/ctf.jpg" alt="img">
+            </li>
+            <!--THE FIFTH SLIDE-->
+            <li>
+              <!--FIFTH SLLIDE OVERLAY-->
+              <div class="slider_overlay"></div> 
+              <!--FIFTH SLIDE MAIN IMAGE-->
+              <img src="img/full-slider/ephiphany.jpg" alt="img">
+            </li>
+            <!--SIXTH SLIDE OVERLAY-->
+            <li>
+              <!--SIXTH SLIDE OVERLAY-->
+              <div class="slider_overlay"></div> 
+              <!--SIXTH SLIDE MAINIMAGE-->
+              <img src="img/full-slider/foss.jpg" alt="img">
+            </li>
           </ul>
           <!-- BEGIN SLIDER NAVIGATION -->
           <nav class="slides-navigation">
