Link to IRC and Forum added

--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
               <div class="single_contact_feaured wow fadeInUp">
                 <i class="fa fa-phone"></i>
                 <h4>Call Us</h4>
-                <p>1-265-596-580</p>                
+                <p>+917874249976</p>                
               </div>
             </div>
             <!-- BEGIN CALL US FEATURE -->
@@ -685,23 +685,23 @@ ACM NIT Surat decided to join and went to local schools to promote computing and
               <div class="single_contact_feaured wow fadeInUp">
                 <i class="fa fa-envelope-o"></i>
                 <h4>Email Address</h4>
-                <p>singlepro@gmail.com</p>
+                <p>admin@nitsurat.acm.org</p>
               </div>
             </div>
             <!-- BEGIN CALL US FEATURE -->
             <div class="col-lg-3 col-md-3 col-sm-6">
               <div class="single_contact_feaured wow fadeInUp">
-                <i class="fa fa-map-marker"></i>
-                <h4>Office Location</h4>
-                <p>Your Company Office Location</p>
+                <img src="img/irc.png" style="width:55px;height:55px;">
+                <h4>Irc Channel</h4>
+                <p>freenode#acm-nit-surat</p>
               </div>
             </div>
             <!-- BEGIN CALL US FEATURE -->
             <div class="col-lg-3 col-md-3 col-sm-6">
               <div class="single_contact_feaured wow fadeInUp">
-                <i class="fa fa-clock-o"></i>
-                <h4>Working Hours</h4>
-                <p>Monday-Friday 9.00-21.00</p>
+                <img src="img/forum.png" style="width:55px;height:55px;">
+                <h4>FORUM</h4>
+                <p>http://nitsurat.acm.org/forum/</p>
               </div>
             </div>
           </div>
